--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <script src="semantic/dist/semantic.min.js"></script>
     <script type="text/javascript" src="//player.wowza.com/player/latest/wowzaplayer.min.js"></script>
     <link rel="stylesheet" type="text/css" href="metro10.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 </head>
 
 <body>
 
-    
-
     <div class="ui one column doubling stackable grid container">
-            <h1>Metropolia 10v</h1>
+        <h1></h1>
         <div class="column">
             <div id="playerElement5"></div>
         </div>
@@ -24,23 +23,24 @@
 
 
     <div class="ui four column doubling stackable grid container">
+        
 
         <div class="column">
-            <i class="huge arrow alternate circle up icon" id="arrow1"></i>
+            <i class="huge arrow alternate circle up icon mauno" id="arrow1"></i>
         </div>
         <div class="column">
-            <i class="huge arrow alternate circle up icon" id="arrow2"></i>
+            <i class="huge arrow alternate circle up icon mauno" id="arrow2"></i>
         </div>
         <div class="column">
-            <i class="huge arrow alternate circle up icon" id="arrow3"></i>
+            <i class="huge arrow alternate circle up icon mauno" id="arrow3"></i>
         </div>
         <div class="column">
-            <i class="huge arrow alternate circle up icon" id="arrow4"></i>
+            <i class="huge arrow alternate circle up icon mauno" id="arrow4"></i>
         </div>
-        </div>
+    </div>
 
 
-    <div class="ui four column doubling stackable grid container">
+    <div class="ui four column large screen only doubling stackable grid container">
         <div class="column">
             <div id="playerElement1"></div>
 
