--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
@@ -14,30 +16,56 @@
 
 <body>
 
-    <div class="ui one column doubling stackable grid container">
-        <h1></h1>
+
+    <div class="ui one column doubling stackable grid container" id="big">'
+        <button class="ui inverted orange button" id="jyrinappi">OHJELMA</button>
         <div class="column">
             <div id="playerElement5"></div>
         </div>
     </div>
 
 
-    <div class="ui four column doubling stackable grid container">
-        
+    <div class="ui four column large screen only doubling stackable grid container">
+
 
         <div class="column">
             <i class="huge arrow alternate circle up icon mauno" id="arrow1"></i>
+            <p id="nimi">Leppävaara</p>
         </div>
         <div class="column">
             <i class="huge arrow alternate circle up icon mauno" id="arrow2"></i>
+            <p id="nimi">Myllypuro</p>
         </div>
         <div class="column">
             <i class="huge arrow alternate circle up icon mauno" id="arrow3"></i>
+            <p id="nimi">Myyrmäki</p>
         </div>
         <div class="column">
             <i class="huge arrow alternate circle up icon mauno" id="arrow4"></i>
+            <p id="nimi">Arabia</p>
         </div>
     </div>
+
+    <div class="ui four column mobile only doubling stackable grid container">
+
+
+            <div class="four widecolumn">
+                <i class="huge arrow alternate circle up icon mauno" id="arrow1"></i>
+                <p id="nimi">Leppävaara</p>
+            </div>
+            <div class="four widecolumn">
+                <i class="huge arrow alternate circle up icon mauno" id="arrow2"></i>
+                <p id="nimi">Myllypuro</p>
+            </div>
+            <div class="four widecolumn">
+                <i class="huge arrow alternate circle up icon mauno" id="arrow3"></i>
+                <p id="nimi">Myyrmäki</p>
+            </div>
+            <div class="four widecolumn">
+                <i class="huge arrow alternate circle up icon mauno" id="arrow4"></i>
+                <p id="nimi">Arabia</p>
+            </div>
+        </div>
 
 
     <div class="ui four column large screen only doubling stackable grid container">
@@ -58,6 +86,91 @@
         </div>
     </div>
 
+    <div class="ui modal" id="jyri">
+        <i class="close icon"></i>
+        <div class="header">
+            Päivän ohjelma
+        </div>
+        <table>
+                <tr>
+                    <th>Aika</th>
+                    <th>Tapahtuma</th>
+                </tr>
+                <tr>
+                    <td>14:00-14:10</td>
+                    <td>Live-musiikkia, Metropolian musiikin opiskelijat</td>
+                </tr>
+                <tr>
+                    <td>14:10-14:30</td>
+                    <td>Juhlan avaus ja kampusjohtajan tervehdys</td>
+                </tr>
+                <tr>
+                    <td>14:30-14:40</td>
+                    <td><strong>ARABIA:</strong> Toimitusjohtaja-rehtorin tervehdys</td>
+                </tr>
+                <tr>
+                    <td>14:40-15:00</td>
+                    <td><strong>ARABIA:</strong> Ministerin puhe</td>
+                </tr>
+                <tr>
+                    <td>15:00-15:10</td>
+                    <td><strong>MYYRMÄKI:</strong> Innovaatio- ja johtamisprofessori Alf Rehnin puheenvuoro, auditorio</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><strong>LEPPÄVAARA:</strong> Sirkusesitys, Pukinmäen Sirkuskoulu</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><strong>ARABIA:</strong> Streetdance-esitys, Sensum-tanssiryhmä</td>
+                </tr>
+                <tr>
+                    <td>15:10-15:20</td>
+                    <td>Ohjelmanumero, ZONE</td>
+                </tr>
+                <tr>
+                    <td>15:20-15:30</td>
+                    <td><strong>LEPPÄVAARA:</strong> Riskiryhmä-improvisaatioryhmä</td>
+                </tr>
+                <tr>
+                    <td>15:30-15:40</td>
+                    <td><strong>MYYRMÄKI:</strong> Kummiluokan tervehdys</td>
+                </tr>
+                <tr>
+                    <td>15:40-16:00</td>
+                    <td><strong>MYYRMÄKI:</strong> Jokeri Pokeri Box</td>
+                </tr>
+                <tr>
+                    <td>16:00-17:00</td>
+                    <td><strong>MYLLYPURO:</strong> Jarkko Tamminen</td>
+                </tr>
+                <tr>
+                    <td>17:00</td>
+                    <td>Juhla päättyy</td>
+                </tr>
+            </table>
+    </div>
+
+    <!--
+    <div class="ui inverted vertical footer segment form-page" id="alaNavi">
+        <div class="ui container">
+            <div class="ui inverted menu">
+                <a class="item">
+                    <i class="home icon"></i> Arabia
+                </a>
+                <a class="item">
+                    <i class="mail icon"></i> Leppävaara
+                </a>
+                <a class="item">
+                    <i class="user icon"></i> Myllypuro
+                </a>
+                <a class="item">
+                        <i class="user icon"></i> Myyrmäki
+                    </a>
+            </div>
+        </div>
+    </div>
+-->
 
     <script src="metro10.js"></script>
 
